# vkinst

./: .gitignore  config example.json  pyproject.toml
vkinst/: helper.py  logger.py  main.py
vkinst/configs/: base_config.py  instagram_download_config.py  instagram_page.py  media_file.py  upload_config.py  vk_config.py
vkinst/instagram/: instagram_downloader.py  shortcode_saver.py
vkinst/vk/: vk_uploader.py
