[tool.poetry]
name = "vkinst"
version = "0.1.0"
description = ""
authors = ["aorews <aorew@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.2"
black = "^23.1.0"
coverage = "^7.2.1"
python-dotenv = "^1.0.0"
instaloader = "^4.9.6"
pyproject-toml = "^0.0.10"
vk-api = "^11.9.9"
dacite = "^1.8.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
